--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,6 +1,6 @@
 body {
-  background-color: #0c0c0c;
-  color: #333;
+  background-color: #030303;
+  color: #0cee13;
   margin: 33px; }
 
 body, p, ol, ul, td {
@@ -83,3 +83,38 @@ div.actions {
 
 label {
   display: block; }
+
+
+.sampleWrap {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    margin: 0 auto;
+    background: url(main.jpg) no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    min-height: 1450px;
+  }
+  
+.bkRGBA {
+    /* 背景画像の透過用CSS */
+    height: 100%;
+    background: rgba(255, 255, 255, 0.5);
+  }
+  
+.sample {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 600px;
+    height: 50px;
+    margin: auto;
+    font-size: 50px;
+  }
+  .navbar {
+    height: 60px;
+  }
