--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,75 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'custom', media: 'all' %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <style>
+      
+
+      .navbar.fixed-top {
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 1030;
+      }
+
+      .navbar-brand {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+
+      .container.content {
+        margin-top: 80px; /* ナビゲーションバーの高さを指定 */
+      }
+    </style>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
-  </body>
-</html>
+    <nav class="navbar navbar-expand-lg navbar-light bg-black fixed-top">
+      
+      <div class="container">
+        <div class="navbar-brand">
+          <%= link_to root_path do %>
+            <%= image_tag("logo.png", alt: "Jblog Logo", width: "70px", height: "70px") %>
+          <% end %>
+        </div>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Blog</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="text-center">
+          <%= link_to 'New Blog', new_blog_path %>
+        </div>
+      </div>
+    </nav>
+
+    <div class="container content">
+      <%= yield %>
+    </div>
+<footer class="footer mt-auto py-3 bg-black">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <p class="mb-0 text-white text-center">© JDiary. All rights reserved.</p>
+      </div>
+    </div>
+  </div>
+</footer>
