--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -3,7 +3,7 @@
     </header>
     <div class="video">
      
-      <%= video_tag("jdiary24.mp4", width: "95%", height: "50%", loop: true, autoplay: true, muted: true) %>
+      <%= video_tag("theop.mp4", width: "95%", height: "50%", loop: true, autoplay: true, muted: true) %>
     </div> 
 
     <h1>Blogs</h1>
