--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -112,3 +112,13 @@
   padding: 0;
   font-size: 13px;
 }
+.user__card {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 20px;
+}
+
+.blog__video {
+  width: 100%;
+  height: auto;
+}
