--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -14,6 +14,7 @@
             <div class="card-body">
               <h5 class="card-title" style="font-size: 16px !important;"><%= blog.title %></h5>
               <p class="card-text" style="font-size: 12px !important;">create: <%= blog.published_at.strftime("%Y/%m/%d") %></p>
+              <p class="card-text" style="font-size: 12px !important;">name: <%= link_to blog.user.name, user_path(blog.user) %></p>
               <%= link_to 'Show', blog, class: 'btn btn-dark', id: "show-link-#{blog.id}", style: 'color: red !important; font-size: 12px !important;' %>
             </div>
           </div>
@@ -24,20 +25,18 @@
 </div>
 
 <style>
-.sampleWrap {
-  position: relative;
-  overflow: hidden;
-}
+  .sampleWrap {
+    position: relative;
+    overflow: hidden;
+  }
 
-.my-custom-card {
-  border: 5px groove  #8B4513;;
-  padding: 10px;
-  background-image: url(futi.jpeg);
-  background-size: cover;
-}
-
+  .my-custom-card {
+    border: 5px groove #8B4513;
+    padding: 10px;
+    background-image: url(futi.jpeg);
+    background-size: cover;
+  }
 </style>
-
 
 <script>
   <% @blogs.each do |blog| %>
