--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,29 +1,56 @@
-<p id="notice"><%= notice %></p>
-<% if user_signed_in? && current_user.id == @blog.user_id %>
-          <div class="prototype__manage">
-             <%= link_to "Edit", edit_blog_path(@blog),class: :prototype__btn %>
-             <%= link_to "Delete", blog_path(@blog), class: :prototype__btn, method: :delete %>
-          </div>
+<div style="text-align: center;">
+  <div style="display: inline-block; text-align: left;">
+    <p id="notice"><%= notice %></p>
+    <% if user_signed_in? && current_user.id == @blog.user_id %>
+      <div class="prototype__manage">
+        <%= link_to "Edit", edit_blog_path(@blog), class: :prototype__btn %>
+        <%= link_to "Delete", blog_path(@blog), class: :prototype__btn, method: :delete %>
+      </div>
+    <% end %>
+
+    
+    <p>
+      <%= video_tag(@blog.movie.to_s, height: "600px", width: "700px",  loop: true, autoplay: true, muted: true, controls: true) %>
+    </p>
+
+    <p>
+      <strong>Title:</strong>
+      <%= @blog.title %>
+    </p>
+
+    <p>
+      <strong>Description:</strong>
+      <%= @blog.description %>
+    </p>
+
+    <p>
+
+    <p>
+      <strong>Published at:</strong>
+      <%= @blog.published_at %>
+    </p>
+
+    <div class="container">
+      <% if user_signed_in? %>
+        <%= form_with(model: [@blog, @comment], local: true) do |form| %>
+          <%= form.text_area :text, placeholder: "To comment", rows: "2" %>
+          <%= form.submit "SEND" %>
         <% end %>
+      <% else %>
+        <strong><p>*You must be logged in to post comments!*</p></strong>
+      <% end %>
 
-<p>
-  <strong>Title:</strong>
-  <%= @blog.title %>
-</p>
+      <div class="comments">
+        <h4>＜Comment field＞</h4>
+        <% @comments.each do |comment| %>
+          <p>
+            <strong><%= link_to comment.user.name, "/users/#{comment.user_id}" %>：</strong>
+            <%= comment.text %>
+          </p>
+        <% end %>
+      </div>
+    </div>
 
-<p>
-  <strong>Description:</strong>
-  <%= @blog.description %>
-</p>
-
-<p>
-  <strong>Movie:</strong>
-  <%= video_tag(@blog.movie.to_s, height: "50%", width: "50%",loop: true,autoplay: true,muted: true,controls: true )%>
-</p>
-
-<p>
-  <strong>Published at:</strong>
-  <%= @blog.published_at %>
-</p>
-
-<%= link_to 'Back', blogs_path %>
+    <%= link_to 'Back', blogs_path %>
+  </div>
+</div>
