--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,6 @@
   <div class='account-page__inner clearfix'>
     <div class='account-page__inner--left account-page__header'>
       <h2>Create Account</h2>
-      <h5>新規アカウントの作成</h5>
     </div>
     <div class='account-page__inner--right user-form'>
       <%= form_with model: resource, as: resource_name, url: registration_path(resource_name), local: true do |f|%>
@@ -26,7 +25,7 @@
         <div class='field'>
           <div class='field-label'>
             <%= f.label :password%>
-            <i>(英数字6文字以上)</i>
+            <i>(At least 6 characters in length)</i>
           </div>
           <div class='field-input'>
             <%= f.password_field :password, autocomplete: "off"%>
