--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -50,7 +50,9 @@
         <% end %>
       </div>
     </div>
+     <div class="text-center">
+      <%= link_to 'Back', blogs_path, style: 'font-size: 50px ' %>
 
-    <%= link_to 'Back', blogs_path %>
+
   </div>
 </div>
