--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,5 +18,8 @@
         <% end %>
       </div>
     </div>
+    <div class="text-center">
+      <%= link_to 'Back', blogs_path, style: 'font-size: 50px ' %>
+
   </div>
 </div>
