--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,27 +1,38 @@
- <%= form_with(model: blog, local: true) do |form| %>
-  
+ <div class='account-page' id='account-page'>
+  <div class='account-page__inner clearfix'>
+    <div class='account-page__inner--left account-page__header'>
+      <h2>Create Blog</h2>
+    </div>
+    <div class='account-page__inner--right user-form'>
+    <%= form_with(model: blog, local: true) do |form| %>
 
-  <div class="field">
-    <%= form.label :title %>
+        <div class='field'>
+          <div class='field-label'>
+            <%= form.label :title %>
     <%= form.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= form.label :description %>
+          </div>
+          <div class='field-input'>
+           <%= form.label :description %>
     <%= form.text_area :description %>
-  </div>
 
-  <div class="field">
-    <%= form.label :movie %>
+          </div>
+          <div class='field'>
+            <div class='field-label'>
+             <%= form.label :movie %>
     <%= form.file_field :movie %>
-  </div>
 
-  <div class="field">
-    <%= form.label :published_at %>
+            </div>
+            <div class='field-input'>
+            <%= form.label :published_at %>
     <%= form.date_select :published_at %>
-  </div>
 
-  <div class="actions">
-    <%= form.submit %>
+            </div>
+          </div>
+          <div class='actions'>
+           <%= form.submit %>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
-<% end %>
+</div>
