--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,6 @@
 <div class="main">
   <div class="inner">
     <div class="user__wrapper">
-      
       <h2 class="page-heading">
         <%= @user.name %>'s blog
       </h2>
@@ -19,7 +18,7 @@
       </div>
     </div>
     <div class="text-center">
-      <%= link_to 'Back', blogs_path, style: 'font-size: 50px ' %>
-
+      <%= link_to 'Back', blogs_path, style: 'font-size: 50px;' %>
+    </div>
   </div>
 </div>
