--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -4,7 +4,9 @@
       <%= video_tag("theop.mp4", width: "95%", height: "50%", loop: true, autoplay: true, muted: true) %>
     </div> 
 
-    <h1>Blogs</h1>
+
+         <h1 style="background-color: red; color: black; padding: 5px; text-align: center; width: fit-content; margin: 0 auto;">Blogs</h1>
+
 
     <div class="row justify-content-center">
       <% @blogs.each do |blog| %>
