--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,66 +1,75 @@
 body {
   background-color: #030303;
   color: #0cee13;
-  margin: 33px; }
+  margin: 33px;
+}
 
 body, p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
-  line-height: 18px; }
+  line-height: 18px;
+}
 
-.kv{
+.kv {
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.video{
+.video {
   text-align: center;
 }
 
-
-
-  
 pre {
   background-color: #eee;
   padding: 10px;
-  font-size: 11px; }
+  font-size: 11px;
+}
 
 a {
-  color: #000; }
+  color: #000;
+}
 
 a:visited {
-  color: #666; }
+  color: #666;
+}
 
 a:hover {
   color: #fff;
-  background-color: #000; }
+  background-color: #000;
+}
 
 th {
-  padding-bottom: 5px; }
+  padding-bottom: 5px;
+}
 
 td {
-  padding: 0 5px 7px; }
+  padding: 0 5px 7px;
+}
 
 div.field,
 div.actions {
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+}
 
 #notice {
-  color: green; }
+  color: green;
+}
 
 .field_with_errors {
   padding: 2px;
   background-color: red;
-  display: table; }
+  display: table;
+}
 
 #error_explanation {
   width: 450px;
   border: 2px solid red;
   padding: 7px 7px 0;
   margin-bottom: 20px;
-  background-color: #f0f0f0; }
+  background-color: #f0f0f0;
+}
 
 #error_explanation h2 {
   text-align: left;
@@ -69,46 +78,49 @@ div.actions {
   font-size: 12px;
   margin: -7px -7px 0;
   background-color: #c00;
-  color: #fff; }
+  color: #fff;
+}
 
 #error_explanation ul li {
   font-size: 12px;
-  list-style: square; }
+  list-style: square;
+}
 
 label {
-  display: block; }
-
+  display: block;
+}
 
 .sampleWrap {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    margin: 0 auto;
-    background: url(main.jpg) no-repeat;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    min-height: 2900px;
-  }
-  
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  margin: 0 auto;
+  background: url(main.jpg) no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  min-height: 2900px;
+}
+
 .bkRGBA {
-    /* 背景画像の透過用CSS */
-    height: 100%;
-    background: rgba(255, 255, 255, 0.5);
-  }
-  
+  /* 背景画像の透過用CSS */
+  height: 100%;
+  background: rgba(255, 255, 255, 0.5);
+}
+
 .sample {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 600px;
-    height: 50px;
-    margin: auto;
-    font-size: 50px;
-  }
-  .navbar {
-    height: 60px;
-  }
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 600px;
+  height: 50px;
+  margin: auto;
+  font-size: 50px;
+}
+
+.navbar {
+  height: 60px;
+}
