--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -12,24 +12,23 @@
       <%= video_tag(@blog.movie.to_s, height: "600px", width: "700px",  loop: true, autoplay: true, muted: true, controls: true) %>
     </p>
 
-   <div class="page-center">
+<div class="page-center">
   <div class="blog-container">
     <div class="blog-item">
-      <div class="label">Title:</div>
+      <div class="label highlight">Title:</div>
       <div class="content"><%= @blog.title %></div>
     </div>
 
     <div class="blog-item">
-      <div class="label">Description:</div>
+      <div class="label highlight">Description:</div>
       <div class="content"><%= @blog.description %></div>
     </div>
 
     <div class="blog-item">
-      <div class="label">Published at:</div>
-      <div class="content"><%= @blog.published_at %></div>
-    </div>
-  </div>
+  <div class="label highlight">Published at:</div>
+  <div class="content"><%= @blog.published_at.strftime('%Y-%m-%d (%A)') %></div>
 </div>
+
 
 
 
