--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,3 +1,14 @@
+<style>
+  .back-link {
+    margin-top: 50px;
+    position: relative;
+  }
+
+  footer {
+    position: relative;
+    z-index: 2;
+  }
+</style>
 <div class="sampleWrap">
   <div class="bkRGBA">
     <div class="video">
