--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,25 @@
+<style>
+  .back-link {
+    margin-top: 50px;
+    position: relative;
+  }
+
+  footer {
+    position: relative;
+    z-index: 2;
+  }
+</style>
+
 <div class="main">
   <div class="inner">
+    <!-- ユーザーのブログ一覧表示 -->
     <div class="user__wrapper">
       <h2 class="page-heading">
         <%= @user.name %>'s blog
       </h2>
       <div class="user__card">
         <% @user.blogs.each do |blog| %>
+          <!-- 各ブログのアイテム -->
           <div class="blog__item">
             <%= video_tag(blog.movie.to_s, class: "blog__video", loop: true, autoplay: true, muted: true, controls: true) %>
             <div class="blog__content">
@@ -17,8 +31,10 @@
         <% end %>
       </div>
     </div>
-    <div class="text-center">
-      <%= link_to 'Back', blogs_path, style: 'font-size: 50px;' %>
+    <!-- Backボタンのスペースを追加 -->
+    <div class="text-center back-link">
+      <%= link_to 'Back', blogs_path, style: 'font-size: 50px' %>
     </div>
   </div>
 </div>
+
