--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -25,16 +25,21 @@
     <div class="row justify-content-center">
       <% @blogs.each do |blog| %>
         <div class="col-md-4">
-          <div class="card my-3 mx-md-auto d-flex flex-column align-items-stretch my-custom-card" style="width: 60%; min-height: 400px;">
-            <%= video_tag(blog.movie.to_s, class: "card-img-top my-custom-video", loop: true, autoplay: true, muted: true, controls: true, width: "100%") %>
-            <div class="card-body">
-              <h5 class="card-title" style="font-size: 16px !important;"><%= blog.title %></h5>
-              <p class="card-text" style="font-size: 12px !important;">create: <%= blog.published_at.strftime("%Y/%m/%d") %></p>
-              <p class="card-text" style="font-size: 12px !important;">name: <%= link_to blog.user.name, user_path(blog.user) %></p>
-              <%= link_to 'Show', blog, class: 'btn btn-dark', id: "show-link-#{blog.id}", style: 'color: red !important; font-size: 12px !important;' %>
-            </div>
-          </div>
-        </div>
+  <div class="card my-3 mx-md-auto d-flex flex-column align-items-stretch my-custom-card" style="width: 60%; min-height: 400px;">
+    <% if blog.movie.present? %>
+      <%= video_tag(blog.movie.to_s, class: "card-img-top my-custom-video", loop: true, autoplay: true, muted: true, controls: true, width: "100%") %>
+    <% else %>
+      <%= image_tag(blog.image_url, class: "card-img-top my-custom-image", width: "100%") if blog.image? %>
+    <% end %>
+    <div class="card-body">
+      <h5 class="card-title" style="font-size: 16px !important;"><%= blog.title %></h5>
+      <p class="card-text" style="font-size: 12px !important;">create: <%= blog.published_at.strftime("%Y/%m/%d") %></p>
+      <p class="card-text" style="font-size: 12px !important;">name: <%= link_to blog.user.name, user_path(blog.user) %></p>
+      <%= link_to 'Show', blog, class: 'btn btn-dark', id: "show-link-#{blog.id}", style: 'color: red !important; font-size: 12px !important;' %>
+    </div>
+  </div>
+</div>
+
       <% end %>
     </div>
   </div>
