--- a/app/views/blogs/search.html.erb
+++ b/app/views/blogs/search.html.erb
@@ -1,9 +1,28 @@
-<%= form_with(url: search_blogs_path, local: true, method: :get, class: "search-form") do |form| %>
-  <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
-  <%= form.submit "検索", class: "search-btn" %>
-<% end %>
+<style>
+  .contents {
+    margin-bottom: 100px; /* フッターの高さ以上のマージンを設定 */
+  }
+
+  .blog__item {
+    margin-bottom: 100px;
+  }
+
+  /* 必要に応じて他のスタイルも調整可能 */
+</style>
+
 <div class="contents row">
   <% @blogs.each do |blog| %>
-    <%= render partial: "blog", locals: { blog: blog } %>
+    <div class="blog__item col-md-4 mt-3"> <!-- mt-3を追加 -->
+      <% if blog.movie.present? %>
+        <%= video_tag(blog.movie.to_s, class: "blog__video", loop: true, autoplay: true, muted: true, controls: true, width: "100%", height: "150px") %>
+      <% else %>
+        <%= image_tag(blog.image_url, class: "blog__image", width: "100%", height: "150px") if blog.image? %>
+      <% end %>
+      <div class="blog__content">
+        <h3 class="blog__title"><%= blog.title %></h3>
+        <p class="blog__date">create: <%= blog.published_at.strftime("%Y/%m/%d") %></p>
+        <%= link_to 'Show', blog, class: 'btn btn-dark', style: 'color: red !important; font-size: 12px !important;' %>
+      </div>
+    </div>
   <% end %>
 </div>
