--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,15 +1,11 @@
 <style>
   .back-link {
-    margin-top: 50px;
-    position: relative;
+    margin-bottom: 50px;
   }
 
-  footer {
-    position: relative;
-    z-index: 2;
-    width: 100%;
-  }
+  
 </style>
+
 
 <div style="text-align: center;">
   <% if user_signed_in? && current_user.id == @blog.user_id %>
@@ -19,22 +15,35 @@
     </div>
   <% end %>
 
-  <p>
-    <%= video_tag(@blog.movie.to_s, height: "600px", width: "700px",  loop: true, autoplay: true, muted: true, controls: true) %>
-  </p>
+  <% if @blog.movie.present? %>
+    <p>
+      <%= video_tag(@blog.movie.to_s, height: "600px", width: "700px", loop: true, autoplay: true, muted: true, controls: true) %>
+    </p>
+  <% end %>
 
   <div class="page-center">
     <div class="blog-container">
+
+      <!-- 画像をtitleより上に移動 -->
+      <% if @blog.image.present? %>
+          <div class="content">
+            <%= image_tag(@blog.image_url, height: "300px", width: "400px") if @blog.image? %>
+          </div>
+      <% end %>
+
+      <!-- title -->
       <div class="blog-item">
         <div class="label highlight">Title:</div>
         <div class="content"><%= @blog.title %></div>
       </div>
 
+      <!-- description -->
       <div class="blog-item">
         <div class="label highlight">Description:</div>
         <div class="content"><%= @blog.description %></div>
       </div>
 
+      <!-- published_at -->
       <div class="blog-item">
         <div class="label highlight">Published at:</div>
         <div class="content"><%= @blog.published_at.strftime('%Y-%m-%d (%A)') %></div>
@@ -64,7 +73,5 @@
       <div class="text-center back-link">
         <%= link_to 'Back', blogs_path, style: 'font-size: 50px' %>
       </div>
-    </div>
   </div>
 </div>
-
