--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -144,14 +144,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 300px; /* 必要に応じて適切な幅を設定 */
+    width: 300px; 
   }
   
   .blog-item {
-    width: 100%; /* 要素の幅を100%に設定 */
+    width: 100%; 
     border: 2px solid #000;
     padding: 10px;
-    margin: 10px 0; /* 上下の余白を設定 */
+    margin: 10px 0; 
     text-align: center;
   }
   
@@ -160,12 +160,12 @@
   }
   
   .content {
-    margin-top: 5px; /* ラベルとコンテンツの間に余白を設定 */
+    margin-top: 5px; 
   }
   .label.highlight {
     font-weight: bold;
     font-size: 18px;
-    color: #FF0000; /* 赤色の文字色 */
+    color: #FF0000; 
     border-bottom: 1px solid #000000; 
   }
   footer {
@@ -176,7 +176,7 @@
   position: fixed;
   bottom: 0;
   left: 0;
-  margin-top: 20px; /* 余白を追加してフッターを下に移動 */
+  margin-top: 20px; 
 }
 
   
