--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -29,9 +29,9 @@
   <div class="card my-3 mx-md-auto d-flex flex-column align-items-stretch my-custom-card" style="width: 60%; min-height: 400px;">
     <% if blog.movie.present? %>
       <%= video_tag(blog.movie.to_s, class: "card-img-top my-custom-video", loop: true, autoplay: true, muted: true, controls: true, width: "100%") %>
-    <% else %>
-      <%= image_tag(blog.image_url, class: "card-img-top my-custom-image", height:"50%",width: "50%") if blog.image? %>
-    <% end %>
+   <% else %>
+      <%= image_tag(blog.image_url, class: "card-img-top my-custom-image", height: "200px", width: "5%") if blog.image? %>
+     <% end %>
     <div class="card-body">
       <h5 class="card-title" style="font-size: 16px !important;"><%= blog.title %></h5>
       <p class="card-text" style="font-size: 12px !important;">create: <%= blog.published_at.strftime("%Y/%m/%d") %></p>
@@ -60,7 +60,7 @@
   }
 
   .my-custom-video {
-    height: 200px; /* 動画の高さを固定する */
+    height: 200px; 
   }
 </style>
 
