--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -58,15 +58,15 @@ footer {
           <strong><p>*You must be logged in to post comments!*</p></strong>
         <% end %>
 
-        <div class="comments">
-          <h4>＜Comment field＞</h4>
-          <% @comments.each do |comment| %>
-            <p>
-              <strong><%= link_to comment.user.name, "/users/#{comment.user_id}" %>：</strong>
-              <%= comment.text %>
-            </p>
-          <% end %>
-        </div>
+        <div class="comments" style="border: 1px solid #ccc; padding: 10px;">
+  <h4>＜Comment field＞</h4>
+  <% @comments.each do |comment| %>
+    <p>
+      <strong><%= link_to comment.user.name, "/users/#{comment.user_id}" %>：</strong>
+      <%= comment.text %>
+    </p>
+  <% end %>
+</div>
       </div>
 
       <div class="text-center back-link">
