--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -60,12 +60,12 @@ footer {
 
         <div class="comments" style="border: 1px solid #ccc; padding: 10px;">
   <h4>＜Comment field＞</h4>
-  <% @comments.each do |comment| %>
-    <p>
-      <strong><%= link_to comment.user.name, "/users/#{comment.user_id}" %>：</strong>
-      <%= comment.text %>
-    </p>
-  <% end %>
+  <% @comments.reverse_each do |comment| %>
+      <p>
+        <strong><%= link_to comment.user.name, "/users/#{comment.user_id}" %>：</strong>
+        <%= comment.text %>
+      </p>
+    <% end %>
 </div>
       </div>
 
